<resources>
    <string name="app_name">Teleasistenci@Tic+</string>
    <string name="version_code">15</string>
    <string name="version_name">Ver. 1.1.5 Beta</string>
    <string name="init_splash_screen_iniciando_aplicacion">Iniciando aplicación</string>
    <string name="tarificacion_adicional_sms_linea_1">El uso de esta aplicación implica el envío de mensajes de texto (SMS) que
            pueden conllevar un coste adicional en su tarifa en caso de no estar incluidos en la misma.
    </string>
    <string name="tarificacion_adicional_sms_linea_2">Consulte a su operadora de telecomunicaciones para conocer detalles
        sobre la tarificación de los mensajes de texto (SMS).
    </string>
    <string name="politica_de_uso_linea_1">La presente aplicación es el fruto de un proyecto de investigación y
        aún se encuentra en fase de pruebas. Toda la responsabilidad de uso recae en el usuario/a de la misma. La aplicación y todos los derechos están
        reservados y son propiedad de Fundación MAGTEL.
    </string>
    <string name="politica_de_uso_linea_2">
    </string>
        <string name="user_options_nombre">Nombre*</string>
        <string name="user_options_apellidos">Apellidos*</string>
        <string name="user_options_nombre_apellidos_no_vacios">*Nombre y apellidos no pueden estar vacíos</string>
        <string name="user_options_contacto_no_vacio">*Al menos es necesario un contacto</string>
        <string name="ERROR">ERROR</string>
        <string name="CORRECTO">CORRECTO</string>
        <string name="error_empty_string">Error: cadena vacía</string>
        <string name="close_window">Cerrar</string>
        <string name="cancel">Cancelar</string>
        <string name="title_activity_act_main">Pantalla principal</string>
        <string name="menu_user_options_exit">Salida</string>
        <string name="menu_actmain_debug_screen">Pantalla de depuración</string>
        <string name="menu_actmain_exit_app">Salida</string>
        <string name="menu_act_user_options">Configuración</string>
        <string name="menu_act_user_about">Acerca de</string>
        <string name="user_options_datos_personales_edit">Datos Personales</string>
        <string name="user_options_datos_personales_correct_edit">Modificación correcta</string>
        <string name="user_options_datos_personales_empty_name_surname_edit">El nombre y apellidos no pueden estar vacíos</string>
        <string name="user_options_contactos_edit">Personas de contacto</string>
        <string name="user_options_contactos_empty_edit">Introduzca al menos un contacto</string>
        <string name="user_options_contactos_empty_phone">El contacto seleccionado no tiene número de teléfono</string>
    <string name="user_options_persona_contacto_label">Persona de contacto (pulse para cambiar)</string>
        <string name="title_activity_act_main_debug">Pantalla de depuracion</string>
        <string name="sms_button_text">Aviso a familiar</string>
        <string name="title_activity_act_debug_memory">Debug > Memoria</string>
        <string name="title_activity_act_debug_data_connection">Debug > DataConnection</string>
        <string name="title_activity_act_debug_check_server">Debug > CheckServer</string>
        <string name="title_activity_act_debug_cifrado">Debug > Cifrado/Descifrado</string>
        <string name="title_activity_act_debug_show_log">Debug > ShowLog</string>
        <string name="title_activity_act_debug_sms">Debug > SMS</string>
        <string name="title_activity_act_debug_ducha">Debug > Modo Ducha</string>
        <string name="title_activity_act_debug_google_services">Debug > GoogleServices</string>
        <string name="label_google_services">Debug > Google Services activados</string>
        <string name="title_activity_act_debug_google_maps">Debug > Google Maps </string>
        <string name="title_activity_act_debug_monitor_bateria">Debug > Monitor Bateria</string>
    <string name="title_activity_act_user_options_datos_personales">Configuración > Datos personales</string>
    <string name="title_activity_act_user_options_persona_contacto">Configuración > Persona/s de Contacto</string>
    <string name="title_activity_act_debug_user_config">Configuración > sharedPreferences</string>
    <string name="title_activity_act_user_options">Configuración usuario/a</string>
    <string name="title_activity_act_user_options_monitor_bateria">Configuración > Monitor de Batería</string>
    <string name="title_activity_act_user_options_manos_libres">Configuración >Manos Libres</string>
        <string name="user_register_porfavor_label">Por favor, introduzca sus datos personales</string>
        <string name="user_register_no_phone_contacs">Se necesitan personas de contacto para poder envíar el aviso.</string>
        <string name="user_register_no_phone_contacs_title">No hay personas de contacto</string>
        <string name="caidas_activar">Activar el modo de detección de caidas</string>
        <string name="caidas_boton_arrancar">Iniciar</string>
        <string name="caidas_boton_parar">Detener</string>
        <string name="caidas_texto">Configuración de la detección de caidas</string>
        <string name="caidas_texto_estado_activo">Servicio iniciado</string>
        <string name="caidas_texto_estado_inactivo">Servicio detenido</string>
        <string name="caidas_texto_estado_del_servicio">Estado del servicio</string>
        <string name="title_activity_act_debug_caidas">actDebugCaidas</string>
        <string name="title_activity_act_user_options_caidas">Detección de caidas</string>
    <string name="zona_segura_label">Activar o desactivar la función</string>
    <string name="title_activity_act_user_options_zona_segura">Zona Segura</string>
    <string name="title_activity_act_zona_segura_set_home">Zona Segura, establecer hogar</string>
    <string name="zona_segura_activar">Activar la función zona segura al inicio</string>
    <string name="zona_segura_texto_estado_activo">Servicio iniciado</string>
    <string name="zona_segura_texto_estado_inactivo">Servicio detenido</string>
    <string name="zona_segura_establecer_home">Pulse para establecer el hogar</string>
    <string name="zona_segura_label_inicial">Zona Segura</string>
    <string name="error_google_play_no_zona_segura">Servicio GooglePlayServices no disponible, se suspende el servicio zona segura</string>
    <string name="error_zona_segura_no_home_set">la función de zona segura requiere establecer el hogar en la configuración</string>
        <string name="user_sms_sent">Enviado</string>
        <string name="title_activity_act_modo_ducha">Modo Ducha</string>
        <string name="modo_ducha_title">Elija el tiempo de la ducha</string>
        <string name="modo_ducha_boton_15_minutos">15 minutos</string>
        <string name="modo_ducha_boton_30_minutos">30 minutos</string>
        <string name="modo_ducha_boton_45_minutos">45 minutos</string>
        <string name="modo_ducha_boton_detener">DETENER</string>
        <string name="action_settings">Settings</string>
        <string name="title_activity_act_ducha_cuenta_atras">Modo ducha: cuenta atrás</string>
    <string name="aceptar">Acepto las condiciones de uso</string>
    <string name="no_volver_a_mostrar">no volver a mostrar este mensaje</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_act_mensaje_tarificacion_extra">Politica de uso y tarificación SMS</string>
    <string name="widget_image_button_description">Pulse para iniciar Tele Asistencia TIC+</string>
    <string name="title_activity_act_debug_gps_shared_preferences">actDebugGpsSharedPreferences
    </string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_act_options_pilotaje">Configuracion > Pilotaje</string>
    <string name="tv_user_options_monitor_bateria_info_estado">Información de Estado</string>
    <string name="tv_nivel_carga">Nivel de carga:</string>
    <string name="tv_estado_bateria">Estado de la batería:</string>
    <string name="tv_estado_receiver">Estado del monitor:</string>
    <string name="tv_nivel_alerta">Nivel alerta %</string>
    <string name="tv_tasa_refresco">Tasa refresco</string>
    <string name="btn_lanzar_receiver">Iniciar</string>
    <string name="btn_parar_receiver">Detener</string>
    <string name="cb_activar_al_inicio">Activar al Inicio</string>
    <string name="btn_guardar">Recordar Esto</string>
    <string name="btn_salir">Salir de aquí</string>
    <string name="menu_user_options_monitor_bateria_guardar">Recordar Esto</string>
    <string name="menu_user_options_monitor_bateria_salir">Salir de Aquí</string>
    <string name="txt_cuerpo_notificacion_bateria">AVISO BATERIA</string>
    <string name="txt_estado_manos_libres">Estado del Modo Manos Libres</string>
    <string name="txt_menu_user_options_manos_libres_guardar">Recordar esto</string>
    <string name="txt_menu_user_options_manos_libres_salida">Salir de aquí</string>
    <string name="title_activity_act_user_options_about">Acerca de</string>
    <string name="txt_acerca_de_titulo">Proyecto</string>
    <string name="txt_acerca_de_texto_parrafo_1">Proyecto financiado por la Junta de Andalucía</string>
    <string name="txt_acerca_de_texto_parrafo_2">y el Fondo Social Europeo procedente del</string>
    <string name="txt_acerca_de_texto_parrafo_3">Programa Operativo Adaptabilidad y Empleo 2007-2013</string>
    <string name="txt_acerca_de_titulo_2">Centros colaboradores</string>
    <string name="txt_acerca_de_titulo_3">Desarrollo y ejecución</string>
</resources>