<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffe3e9e3">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#ffe3e9e3"
    tools:context="com.fundacionmagtel.android.teleasistenciaticplus.act.user.actUserOptionsZonaSegura">

    <TextView
        android:id="@+id/zona_segura_label_principal"
        android:text="@string/zona_segura_label_inicial"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <View
        android:id="@+id/zona_segura_linea"
        android:layout_below="@+id/zona_segura_label_principal"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#000000"/>

    <Button
        android:id="@+id/zona_segura_establecer_home"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/zona_segura_linea"
        android:layout_marginTop="10dp"
        android:onClick="onClick"
        android:text="@string/zona_segura_establecer_home" />

    <TextView
        android:id="@+id/zona_segura_label_secundaria"
        android:text="@string/zona_segura_label"
        android:layout_below="@+id/zona_segura_establecer_home"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <View
        android:id="@+id/zona_segura_linea_secundaria"
        android:layout_below="@+id/zona_segura_label_secundaria"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#000000"/>


    <CheckBox
        android:id="@+id/zona_segura_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/zona_segura_linea_secundaria"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:onClick="onClick"
        android:text="@string/zona_segura_activar"
        />

    <Button
        android:id="@+id/zona_segura_boton_arrancar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/zona_segura_checkbox"
        android:layout_alignStart="@+id/zona_segura_checkbox"
        android:layout_below="@+id/zona_segura_checkbox"
        android:layout_marginTop="40dp"
        android:onClick="onClick"
        android:text="@string/caidas_boton_arrancar"/>

    <Button
        android:id="@+id/zona_segura_boton_parar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/zona_segura_checkbox"
        android:layout_alignRight="@+id/zona_segura_checkbox"
        android:layout_alignTop="@+id/zona_segura_boton_arrancar"
        android:onClick="onClick"
        android:text="@string/caidas_boton_parar"

        android:saveEnabled="false"/>

    <TextView
        android:id="@+id/zona_segura_texto_estado_servicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/zona_segura_boton_arrancar"
        android:text="@string/caidas_texto_estado_activo" />


</RelativeLayout>
</ScrollView>