<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ff33b5e5">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.fundacionmagtel.android.teleasistenciaticplus.act.actMensajeTarificacionExtraYPoliticaDeUso"
    android:background="#ff33b5e5">

    <TextView
        android:text="Política de uso"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#ffffff"/>

    <TextView
        android:layout_marginTop="20dp"
        android:text="@string/politica_de_uso_linea_1"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <TextView
        android:text="Advertencia"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#ffffff"/>

    <TextView
        android:layout_marginTop="20dp"
        android:text="@string/tarificacion_adicional_sms_linea_1"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="20dp"
        android:text="@string/tarificacion_adicional_sms_linea_2"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <CheckBox
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_volver_a_mostrar"
        android:layout_gravity="right"
        android:id="@+id/act_mensaje_tarificacion_no_volver_a_mostrar" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/aceptar"
        android:layout_centerVertical="true"
        android:layout_gravity="right"
        android:textColor="#ffFFFFFF"
        android:textSize="18dp"
        android:onClick="aceptar_advertencia_tarificacion_button"
    />

</LinearLayout>
</ScrollView>