<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffe3e9e3">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.fundacionmagtel.android.teleasistenciaticplus.act.user.actUserOptionsAbout">

        <TextView
            android:id="@+id/txt_acerca_de_titulo_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_acerca_de_titulo"
            android:textSize="20sp" />

        <View
            android:id="@+id/acercade_linea"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#000000" />

        <TextView
            android:id="@+id/txt_acerca_de_texto_parrafo_1_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_gravity="center"
            android:text="@string/txt_acerca_de_texto_parrafo_1"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/txt_acerca_de_texto_parrafo_2_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:text="@string/txt_acerca_de_texto_parrafo_2"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/txt_acerca_de_texto_parrafo_3_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:text="@string/txt_acerca_de_texto_parrafo_3"
            android:textSize="14sp"
            android:textStyle="bold"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:src="@drawable/logo_emplea_30_250" />

        <TextView
            android:layout_marginTop="20sp"
            android:id="@+id/txt_acerca_de_titulo_label_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_acerca_de_titulo_2"
            android:textSize="20sp" />

        <View
            android:id="@+id/acercade_linea_2"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#000000" />

        <TextView
            android:id="@+id/acerca_de_entidades"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:textSize="12sp"/>

        <TextView
            android:layout_marginTop="20sp"
            android:id="@+id/txt_acerca_de_titulo_label_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_acerca_de_titulo_3"
            android:textSize="20sp" />

        <View
            android:id="@+id/acercade_linea_3"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#000000" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:src="@drawable/loadingscreen_funmagtel" />

        <TextView
            android:id="@+id/acerca_de_desarrollo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:textSize="12sp"/>

    </LinearLayout>
</ScrollView>
