<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ff33b5e5">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.fundacionmagtel.android.teleasistenciaticplus.act.ducha.actModoDucha"
    android:background="#ff33b5e5">

    <ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/iconoModoDucha"
    android:src="@drawable/ducha"
    android:layout_gravity="center" />

    <TextView android:text="@string/modo_ducha_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="20dp"
        android:textColor="#ffFFFFFF"
        android:layout_below="@+id/iconoModoDucha"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:layout_gravity="center"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modo_ducha_boton_15_minutos"
        android:id="@+id/btn_ducha_15_minutos"
        android:textColor="#ffFFFFFF"
        android:textSize="34dp"
        android:onClick="activarDucha"
        android:nestedScrollingEnabled="false"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modo_ducha_boton_30_minutos"
        android:id="@+id/btn_ducha_30_minutos"
        android:textColor="#ffFFFFFF"
        android:textSize="34dp"
        android:onClick="activarDucha"
        android:layout_below="@+id/btn_ducha_15_minutos"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modo_ducha_boton_45_minutos"
        android:id="@+id/btn_ducha_45_minutos"
        android:textColor="#ffFFFFFF"
        android:textSize="34dp"
        android:onClick="activarDucha"
        android:layout_below="@+id/btn_ducha_30_minutos"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Personalizado"
        android:id="@+id/btn_ducha_personalizado_minutos"
        android:textColor="#ffFFFFFF"
        android:textSize="34dp"
        android:onClick="elegirMinutos"
        android:layout_below="@+id/btn_ducha_45_minutos"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"/>

</LinearLayout>
</ScrollView>