<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#ffe3e9e3"
    tools:context="com.fundacionmagtel.android.teleasistenciaticplus.act.user.actUserOptionsDatosPersonales">

    <TextView
        android:id="@+id/user_options_nombre_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/user_options_nombre">
    </TextView>

    <EditText
        android:id="@+id/user_options_datos_personales_nombre_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:inputType="textPersonName"
        android:textSize="20sp"></EditText>

    <TextView
        android:id="@+id/user_options_apellidos_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/user_options_apellidos">

    </TextView>

    <EditText
        android:id="@+id/user_options_datos_personales_apellidos_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:inputType="textPersonName"
        android:textSize="20sp"></EditText>

    <TextView
        android:id="@+id/user_options_nombre_apellidos_no_vacios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/user_options_nombre_apellidos_no_vacios"
        android:textColor="@color/grey">
    </TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/user_options_datos_personales_edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:onClick="user_options_datos_personales_edit"
            android:text="Guardar y salir" />


     </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="staff"
        android:id="@+id/btnhidden"
        android:layout_gravity="right"
        android:onClick="showStaff"
        android:visibility="invisible" />

</LinearLayout>
